--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/student
+spring.datasource.url=jdbc:mysql://localhost:3306/q1
 spring.datasource.username=root
-spring.datasource.password=As030501
+spring.datasource.password=Mf112233
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port = 8081
+server.port = 8085
