--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/q1
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
-spring.datasource.password=Mf112233
+spring.datasource.password=moks
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port = 8085
