--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
 spring.datasource.password=As030501
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port = 8085
+server.port = 8086
+spring.resources.static-locations=classpath:/static/
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
