--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee
+spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
-spring.datasource.password=moks
+spring.datasource.password=As030501
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port = 8086
+server.port = 8088
 spring.resources.static-locations=classpath:/static/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
