--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/vmabb
 spring.datasource.username=root
-spring.datasource.password=Mf112233
+spring.datasource.password=As030501
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8085
+spring.resources.static-locations=classpath:/static/
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+logging.level.org.springframework.security=DEBUG
