--- a/VMABB/src/main/resources/application.properties
+++ b/VMABB/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 logging.level.org.springframework.security=DEBUG
+spring.resources.chain.strategy.content.enabled=true
